--- a/app/src/output.css
+++ b/app/src/output.css
@@ -581,6 +581,18 @@ video {
   bottom: 0px;
 }
 
+.right-0 {
+  right: 0px;
+}
+
+.right-4 {
+  right: 1rem;
+}
+
+.top-4 {
+  top: 1rem;
+}
+
 .-z-10 {
   z-index: -10;
 }
@@ -595,6 +607,10 @@ video {
 
 .h-screen {
   height: 100vh;
+}
+
+.min-h-full {
+  min-height: 100%;
 }
 
 .w-full {
@@ -669,4 +685,8 @@ video {
 
 .uppercase {
   text-transform: uppercase;
+}
+
+.outline {
+  outline-style: solid;
 }
