--- a/app/src/output.css
+++ b/app/src/output.css
@@ -557,14 +557,6 @@ video {
   position: relative;
 }
 
-.inset-12 {
-  inset: 3rem;
-}
-
-.inset-8 {
-  inset: 2rem;
-}
-
 .inset-4 {
   inset: 1rem;
 }
@@ -573,20 +565,12 @@ video {
   left: 0px;
 }
 
-.top-0 {
-  top: 0px;
-}
-
-.bottom-0 {
-  bottom: 0px;
-}
-
-.right-0 {
-  right: 0px;
-}
-
 .right-4 {
   right: 1rem;
+}
+
+.top-0 {
+  top: 0px;
 }
 
 .top-4 {
@@ -595,6 +579,26 @@ video {
 
 .right-8 {
   right: 2rem;
+}
+
+.top-8 {
+  top: 2rem;
+}
+
+.right-6 {
+  right: 1.5rem;
+}
+
+.top-6 {
+  top: 1.5rem;
+}
+
+.right-12 {
+  right: 3rem;
+}
+
+.right-10 {
+  right: 2.5rem;
 }
 
 .-z-10 {
@@ -609,12 +613,12 @@ video {
   grid-column: span 2 / span 2;
 }
 
-.mt-4 {
-  margin-top: 1rem;
-}
-
 .mb-4 {
   margin-bottom: 1rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
 .flex {
@@ -633,16 +637,16 @@ video {
   height: 100vh;
 }
 
+.max-h-\[calc\(100vh-4rem\)\] {
+  max-height: calc(100vh - 4rem);
+}
+
 .min-h-full {
   min-height: 100%;
 }
 
 .w-full {
   width: 100%;
-}
-
-.columns-2 {
-  columns: 2;
 }
 
 .grid-cols-2 {
@@ -665,16 +669,24 @@ video {
   gap: 1rem;
 }
 
-.gap-3 {
-  gap: 0.75rem;
-}
-
 .gap-8 {
   gap: 2rem;
 }
 
-.rounded {
-  border-radius: 0.25rem;
+.gap-6 {
+  gap: 1.5rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.gap-1 {
+  gap: 0.25rem;
+}
+
+.overflow-auto {
+  overflow: auto;
 }
 
 .rounded-md {
@@ -683,11 +695,6 @@ video {
 
 .bg-transparent {
   background-color: transparent;
-}
-
-.bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity, 1));
 }
 
 .bg-gradient-to-b {
@@ -704,6 +711,18 @@ video {
   --tw-gradient-to: #00111C var(--tw-gradient-to-position);
 }
 
+.p-8 {
+  padding: 2rem;
+}
+
+.p-6 {
+  padding: 1.5rem;
+}
+
+.p-0 {
+  padding: 0px;
+}
+
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
@@ -712,16 +731,6 @@ video {
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
-}
-
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
 }
 
 .text-3xl {
@@ -750,9 +759,8 @@ video {
   text-transform: uppercase;
 }
 
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+.capitalize {
+  text-transform: capitalize;
 }
 
 .outline {
