--- a/app/src/output.css
+++ b/app/src/output.css
@@ -557,6 +557,14 @@ video {
   position: relative;
 }
 
+.inset-12 {
+  inset: 3rem;
+}
+
+.inset-8 {
+  inset: 2rem;
+}
+
 .inset-4 {
   inset: 1rem;
 }
@@ -565,12 +573,20 @@ video {
   left: 0px;
 }
 
-.right-4 {
-  right: 1rem;
-}
-
 .top-0 {
   top: 0px;
+}
+
+.bottom-0 {
+  bottom: 0px;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.right-4 {
+  right: 1rem;
 }
 
 .top-4 {
@@ -581,24 +597,16 @@ video {
   right: 2rem;
 }
 
-.top-8 {
-  top: 2rem;
-}
-
-.right-6 {
-  right: 1.5rem;
+.right-10 {
+  right: 2.5rem;
 }
 
 .top-6 {
   top: 1.5rem;
 }
 
-.right-12 {
-  right: 3rem;
-}
-
-.right-10 {
-  right: 2.5rem;
+.bottom-4 {
+  bottom: 1rem;
 }
 
 .-z-10 {
@@ -611,6 +619,10 @@ video {
 
 .col-span-2 {
   grid-column: span 2 / span 2;
+}
+
+.mt-4 {
+  margin-top: 1rem;
 }
 
 .mb-4 {
@@ -649,6 +661,10 @@ video {
   width: 100%;
 }
 
+.columns-2 {
+  columns: 2;
+}
+
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
@@ -669,32 +685,65 @@ video {
   gap: 1rem;
 }
 
+.gap-3 {
+  gap: 0.75rem;
+}
+
 .gap-8 {
   gap: 2rem;
-}
-
-.gap-6 {
-  gap: 1.5rem;
-}
-
-.gap-2 {
-  gap: 0.5rem;
 }
 
 .gap-1 {
   gap: 0.25rem;
 }
 
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.gap-6 {
+  gap: 1.5rem;
+}
+
 .overflow-auto {
   overflow: auto;
+}
+
+.rounded {
+  border-radius: 0.25rem;
 }
 
 .rounded-md {
   border-radius: 0.375rem;
 }
 
+.border-b {
+  border-bottom-width: 1px;
+}
+
+.border-t {
+  border-top-width: 1px;
+}
+
+.border-b-white\/50 {
+  border-bottom-color: rgb(255 255 255 / 0.5);
+}
+
+.border-b-white\/10 {
+  border-bottom-color: rgb(255 255 255 / 0.1);
+}
+
+.border-t-white\/10 {
+  border-top-color: rgb(255 255 255 / 0.1);
+}
+
 .bg-transparent {
   background-color: transparent;
+}
+
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity, 1));
 }
 
 .bg-gradient-to-b {
@@ -707,12 +756,28 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
+.from-\[\#11071A\] {
+  --tw-gradient-from: #11071A var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(17 7 26 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[\#00121F\] {
+  --tw-gradient-from: #00121F var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(0 18 31 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
 .to-\[\#00111C\] {
   --tw-gradient-to: #00111C var(--tw-gradient-to-position);
 }
 
-.p-8 {
-  padding: 2rem;
+.to-\[\#24192E\] {
+  --tw-gradient-to: #24192E var(--tw-gradient-to-position);
+}
+
+.to-\[\#0D0316\] {
+  --tw-gradient-to: #0D0316 var(--tw-gradient-to-position);
 }
 
 .p-6 {
@@ -731,6 +796,24 @@ video {
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
+}
+
+.pt-4 {
+  padding-top: 1rem;
 }
 
 .text-3xl {
@@ -761,6 +844,11 @@ video {
 
 .capitalize {
   text-transform: capitalize;
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
 .outline {
