--- a/app/src/output.css
+++ b/app/src/output.css
@@ -557,14 +557,6 @@ video {
   position: relative;
 }
 
-.inset-12 {
-  inset: 3rem;
-}
-
-.inset-8 {
-  inset: 2rem;
-}
-
 .inset-4 {
   inset: 1rem;
 }
@@ -573,20 +565,12 @@ video {
   left: 0px;
 }
 
-.top-0 {
-  top: 0px;
-}
-
-.bottom-0 {
-  bottom: 0px;
-}
-
-.right-0 {
-  right: 0px;
-}
-
 .right-4 {
   right: 1rem;
+}
+
+.top-0 {
+  top: 0px;
 }
 
 .top-4 {
@@ -597,12 +581,24 @@ video {
   right: 2rem;
 }
 
-.right-10 {
-  right: 2.5rem;
+.top-8 {
+  top: 2rem;
+}
+
+.right-6 {
+  right: 1.5rem;
 }
 
 .top-6 {
   top: 1.5rem;
+}
+
+.right-12 {
+  right: 3rem;
+}
+
+.right-10 {
+  right: 2.5rem;
 }
 
 .bottom-4 {
@@ -621,16 +617,20 @@ video {
   grid-column: span 2 / span 2;
 }
 
-.mt-4 {
-  margin-top: 1rem;
-}
-
 .mb-4 {
   margin-bottom: 1rem;
 }
 
 .mt-2 {
   margin-top: 0.5rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
 }
 
 .flex {
@@ -661,10 +661,6 @@ video {
   width: 100%;
 }
 
-.columns-2 {
-  columns: 2;
-}
-
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
@@ -685,52 +681,32 @@ video {
   gap: 1rem;
 }
 
-.gap-3 {
-  gap: 0.75rem;
-}
-
 .gap-8 {
   gap: 2rem;
-}
-
-.gap-1 {
-  gap: 0.25rem;
-}
-
-.gap-2 {
-  gap: 0.5rem;
 }
 
 .gap-6 {
   gap: 1.5rem;
 }
 
-.overflow-auto {
-  overflow: auto;
+.gap-2 {
+  gap: 0.5rem;
 }
 
-.rounded {
-  border-radius: 0.25rem;
+.gap-1 {
+  gap: 0.25rem;
+}
+
+.overflow-auto {
+  overflow: auto;
 }
 
 .rounded-md {
   border-radius: 0.375rem;
 }
 
-.border-b {
-  border-bottom-width: 1px;
-}
-
 .border-t {
   border-top-width: 1px;
-}
-
-.border-b-white\/50 {
-  border-bottom-color: rgb(255 255 255 / 0.5);
-}
-
-.border-b-white\/10 {
-  border-bottom-color: rgb(255 255 255 / 0.1);
 }
 
 .border-t-white\/10 {
@@ -741,11 +717,6 @@ video {
   background-color: transparent;
 }
 
-.bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity, 1));
-}
-
 .bg-gradient-to-b {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
@@ -753,12 +724,6 @@ video {
 .from-\[\#24192E\] {
   --tw-gradient-from: #24192E var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(36 25 46 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-\[\#11071A\] {
-  --tw-gradient-from: #11071A var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(17 7 26 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
@@ -772,12 +737,12 @@ video {
   --tw-gradient-to: #00111C var(--tw-gradient-to-position);
 }
 
-.to-\[\#24192E\] {
-  --tw-gradient-to: #24192E var(--tw-gradient-to-position);
-}
-
 .to-\[\#0D0316\] {
   --tw-gradient-to: #0D0316 var(--tw-gradient-to-position);
+}
+
+.p-8 {
+  padding: 2rem;
 }
 
 .p-6 {
@@ -798,22 +763,20 @@ video {
   padding-bottom: 0.75rem;
 }
 
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.pb-4 {
-  padding-bottom: 1rem;
-}
-
 .pt-4 {
   padding-top: 1rem;
+}
+
+.pt-10 {
+  padding-top: 2.5rem;
+}
+
+.pt-12 {
+  padding-top: 3rem;
+}
+
+.pt-16 {
+  padding-top: 4rem;
 }
 
 .text-3xl {
@@ -844,11 +807,6 @@ video {
 
 .capitalize {
   text-transform: capitalize;
-}
-
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
 .outline {
